--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,13 @@
     <string name="confirm_delete">Are you sure you want to delete this recipe?</string>
     <string name="confirm_title">Delete Confirmation</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string-array name="category_items">
+        <item>Recipe Category</item>
+        <item>Appetizer</item>
+        <item>Entree</item>
+        <item>Dessert</item>
+        <item>Salad</item>
+        <item>Side Dish</item>
+        <item>Other</item>
+    </string-array>
 </resources>
